[package]
name = "day12"
version = "0.1.0"
edition = "2021"

[features]
default = ["rayon", "recursion"]
rayon = ["dep:rayon"]
recursion = []

[dependencies]
lazy_static = "1.4"
rayon = { version = "1.8.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
